# PyConsoleAppBase

./: .gitignore  AppConsoleTemplate.py  CHANGELOG.md  Compiler.py  ConsoleAppTemplate.py  LICENSE  Locales.py  MyCounterApp.py  README.md  ReadMe.md
ConsoleAppPackage/: Makefile  README-dev.md  README.md  setup.py
ConsoleAppPackage/ConsoleAppBase/: Core.py  MenuItem.py  __init__.py
Example/: .gitignore  Locales.py  Makefile  MyCounterApp.py  README.md
example/: Makefile  README.md
src/: Makefile  README.md  pyproject.toml
src/ConsoleAppBase/: Config.py  Core.py  LocaleBase.py  Machine.py  Menu.py
