[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ConsoleAppBase"
authors = [
    {name = "Ondřej Bína", email = "xbinao@seznam.cz"}
]
version = "1.0.3"
description = "Console App Base"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/binaondrej/PyConsoleAppBase"
Issues = "https://github.com/binaondrej/PyConsoleAppBase/issues"
